# name_provider

./: CMakeLists.txt  package.xml
msg/: Person.msg
scripts/: name_provider_node.py
srv/: CreateNewPerson.srv  GetRealName.srv
